@@ -1,3 +1,3 @@
-confdb.version=V01-06-40
+confdb.version=V01-06-41
 confdb.contact=raul.jimenez.estupinan@cern.ch
 confdb.url=http://j2eeps-test.cern.ch/test-cms-project-confdb-hltdev/
